<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SofaScoreAcademy4</string>
    <string name="create_title">Create</string>
    <string name="show_title">Show</string>

    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="founder">Founder</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="city">City</string>
    <string name="slogan">Slogan</string>
    <string name="yearFounded">Foundation year</string>
    <string name="country">Country</string>
    <string name="industry">Industry</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="fillEmpty">Fill/Empty list</string>


    <string name="create_company_title">Create a company</string>

    <string name="healthcare">Healthcare</string>
    <string name="technology">Technology</string>
    <string name="finance">Finance</string>
    <string name="retail">Retail</string>
    <string name="other">Other</string>

    <string name="company_public">Public</string>
    <string name="company_private">Private</string>
    <string name="company_type">Company type</string>

    <string name="success_message">Hurray, You successfully added new company!</string>

    <string name="error_name">Please fill in name field!</string>
    <string name="error_address">Please fill in address field!</string>
    <string name="error_city">Please fill in city field!</string>
    <string name="error_country">Please fill in country field!</string>
    <string name="error_founder">Please fill in founder field!</string>
    <string name="error_email">Please fill in email field!</string>
    <string name="error_website">Please fill in website field!</string>
    <string name="error_desc">Please fill in description field!</string>
    <string name="error_slogan">Please fill in slogan field!</string>
    <string name="error_foundation_year">Please enter year from 1500 to 2023!</string>

    <string name="error_fill_all">Please fill out all fields with valid info to continue!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>

    <string name="companies_empty">You dont have any companies added!</string>

    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>

    <string name="package_name">com.renato.sofascoreacademy4</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>