<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateCompanyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_company_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/name_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/address_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/city_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/country_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/founder_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/founder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_field" />

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/email_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/founder_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/website_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/website"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/description_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/website_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.renato.sofascoreacademy4.ui.customElements.CustomEditText
            android:id="@+id/foundation_field"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            app:hint="@string/yearFounded"
            app:inputType="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_field"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/foundation_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <include
            android:id="@+id/radioGroup"
            layout="@layout/custom_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:padding="15dp"
            android:text="@string/create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>