<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/company_public"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/company_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_public"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/company_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_private"
            android:layout_weight="1"/>


    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>